--- a/app/templates/c.html
+++ b/app/templates/c.html
@@ -12,9 +12,50 @@
 
 		<script src="{% static '/vendors/jquery/jquery-3.3.1.min.js' %}"></script>
 		<script src="{% static '/vendors/jquery-ui/jquery-ui.min.js' %}"></script>
-	</head>
+	<style type="text/css">
+       .body {
+         display:flex;
+
+       }
+       .flex-container {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: row-reverse;
+        justify-content: center;
+        background: purple;
+/*         align-items: flex-end; */
+        height: 1300px;
+        margin: 5px;
+      }
+      .box {
+        margin: 35px;
+        height: 290px;
+        width: 380px;
+        background-color: orange;
+        
+
+      }
+      
+    </style>
+  </head>
 	<body>
+    
 		<!-- Your layout here -->
+    <div class="flex-container">
+      <div class="box"> 
+      </div>
+      <div class="box">
+      </div>
+      <div class="box">
+      </div>
+      <div class="box"> 
+      </div>
+      <div class="box">
+      </div>
+      <div class="box">
+      </div>
+      
+    </div>
 
 	</body>
 </html>
